// Poseidon
// Copyright (c) The Poseidon Authors.
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR
// CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
// LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS FOR
// A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
//
// See the Apache Version 2.0 License for specific language governing
// permissions and limitations under the License.

syntax = "proto3";

package stats;

service PoseidonStats {
  rpc ReceiveNodeStats(stream NodeStats) returns (stream NodeStatsResponse) {}
  rpc ReceivePodStats(stream PodStats) returns (stream PodStatsResponse) {}
}

message NodeStats {
  string node_uid = 1;
  uint64 cpu_allocatable = 2;
  uint64 cpu_capacity = 3;
  uint64 cpu_reservation = 4;
  uint64 cpu_utilization = 5;
  uint64 mem_allocatable = 6;
  uint64 mem_capacity = 7;
  uint64 mem_reservation = 8;
  uint64 mem_utilization = 9;
}

message NodeStatsResponse {
}

message PodStats {
  string pod_uid = 1;
  uint64 cpu_limit = 2;
  uint64 cpu_request = 3;
  uint64 cpu_usage = 4;
  uint64 mem_limit = 5;
  uint64 mem_request = 6;
  uint64 mem_usage = 7;
  uint64 mem_working_set = 8;
  uint64 mem_page_faults = 9;
  double mem_page_faults_rate = 10;
  uint64 major_page_faults = 11;
  double major_page_faults_rate = 12;
  uint64 net_rx = 13;
  uint64 net_rx_errors = 14;
  double net_rx_errors_rate = 15;
  double net_rx_rate = 16;
  uint64 net_tx = 17;
  uint64 net_tx_errors = 18;
  double net_tx_errors_rate = 19;
  double net_tx_rate = 20;
}

message PodStatsResponse {
}